# php-docbook

./: .envrc  .gitignore  .gitmodules  Cargo.toml  flake.nix  rust-toolchain.toml
parser/: Cargo.toml
parser/src/: function.rs  lib.rs  text.rs  type.rs
src/: cli.rs  main.rs
src/parser/: function.rs  mod.rs  type.rs
src/tui/: event.rs  mod.rs  modal.rs
src/tui/modal/: mod.rs  search_modal.rs
src/tui/screen/: mod.rs
