[package]
name = "phpdoc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
ansi-to-tui = "7.0.0"
bat = { version = "0.25.0", default-features = false, features = [
  "regex-fancy",
] }
clap = { version = "4.5.35", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", default-features = false, features = [
  "derive-more",
  "events",
  "bracketed-paste",
] }
derive_builder = "0.20.2"
libxml = "0.3.3"
mago-parser = "0.22.2"
mago-span = "0.22.2"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "fs", "rt-multi-thread"] }
