[package]
name = "php-docbook"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"
description = "A PHP Documentation viewer for the terminal."
authors = ["Zuruuh <zuruh.dev@proton.me>"]
keywords = ["php", "tui"]
repository = "https://github.com/Zuruuh/php-docbook"

[dependencies]
ansi-to-tui = "7.0.0"
anstyle = "1.0.10"
bat = { version = "0.25.0", default-features = false, features = [
  "regex-fancy",
] }
clap = { version = "4.5.35", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
derive_more = { version = "2.0.1", features = ["display"] }
directories = "6.0.0"
fancy-regex = "0.14.0"
futures-util = "0.3.31"
fuzzy-matcher = "0.3.7"
glob = "0.3.2"
indoc = "2.0.6"
jiff = { version = "0.2.6", default-features = false, features = [
  "alloc",
  "std",
] }
libxml = "0.3.3"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = [
  "macros",
  "fs",
  "rt-multi-thread",
  "time",
] }
tui-input = { rev = "6198c80de72610c852948bd9b4dbc97687244cea", git = "https://github.com/Zuruuh/tui-input.git", features = [
  "crossterm",
] }
